# machinery-rs

./: Cargo.toml  Machinery.toml  Makefile.toml  readme.md
crates/machinery/: Cargo.toml
crates/machinery-api/: Cargo.toml
crates/machinery-api/src/: foundation.rs  lib.rs  the_machinery.rs
crates/machinery-api/src/plugins/: creation_graph.rs  editor_views.rs  entity.rs  graph_common.rs  graph_interpreter.rs  mod.rs  render_graph.rs  renderer.rs  shader_system.rs  simulate.rs  simulate_common.rs  simulation.rs  the_machinery_shared.rs  ui.rs
crates/machinery-generator/: Cargo.toml
crates/machinery-generator/src/: bindings.rs  extensions.rs  main.rs
crates/machinery-macros/: Cargo.toml
crates/machinery-macros/src/: identifier.rs  instance_export.rs  lib.rs  plugin.rs  service_derive.rs  service_export.rs  service_impl.rs  singleton_derive.rs  singleton_export.rs  utils.rs
crates/machinery/src/: lib.rs  plugin.rs  registry_storage.rs  service.rs  singleton.rs  tracing.rs
crates/machinery/src/integrations/: mod.rs  ultraviolet.rs
example/: Cargo.toml  Makefile.toml
example/src/: lib.rs
machinery/: Cargo.toml  build.rs
machinery-generator/: Cargo.toml
machinery-generator/src/: bindings.rs  callers.rs  config.rs  extensions.rs  main.rs
machinery-macro/: Cargo.toml
machinery-macro/src/: lib.rs
machinery-macros/: Cargo.toml
machinery-macros/src/: lib.rs
machinery-sys/: Cargo.toml  build.rs  foundation.h  wrapper.h
machinery-sys/headers/plugins/: entity.h  the_machinery_shared.h
machinery-sys/src/: foundation.rs  lib.rs
machinery-sys/src/plugins/: entity.rs  the_machinery_shared.rs
machinery/src/: foundation.rs  lib.rs  tracing.rs  tracing_sub.rs
machinery/src/plugins/: entity.rs  mod.rs  the_machinery_shared.rs
machinery/src/tm/: foundation.rs  mod.rs  the_machinery.rs
machinery/src/tm/plugins/: editor_views.rs  entity.rs  mod.rs  the_machinery_shared.rs  ui.rs
