[package]
name = "machinery-macros"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Macro utilities for the machinery crate"
repository = "https://gitlab.com/celphase/machinery-rs"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
proc-macro2 = "1.0.27"
syn = { version = "1.0.73", features = ["full"] }
