[package]
name = "machinery"
version = "0.7.0"
license = "MIT OR Apache-2.0"
description = "Rust bindings for The Machinery game engine"
repository = "https://gitlab.com/celphase/machinery-rs"
edition = "2018"

[dependencies]
const-cstr = "0.3.0"
tracing = "0.1.26"
machinery-macros = { version = "0.3.0", path = "../machinery-macros" }
