[package]
name = "machinery-generator"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Bindings generator for The Machinery headers"
repository = "https://github.com/celphase/machinery-rs"
edition = "2018"

[dependencies]
bindgen = "0.59.0"
heck = "0.3.3"
indexmap = { version = "1.7.0", features = ["serde"] }
proc-macro2 = "1.0.27"
quote = "1.0.9"
serde = { version = "1.0.126", features = ["derive"] }
syn = { version = "1.0.73", features = ["full"] }
toml = "0.5.8"
walkdir = "2.3.2"
nom = "7.0.0"
