[package]
name = "machinery-macros"
version = "0.6.0"
license = "MIT OR Apache-2.0"
description = "Macro utilities for the `machinery` and `machinery-api` crates"
repository = "https://github.com/celphase/machinery-rs"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
murmurhash64 = "0.3.1"
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = { version = "1.0.73", features = ["full"] }
