[package]
name = "machinery"
version = "0.13.0"
license = "MIT OR Apache-2.0"
description = "Utilities and safe wrappers for working with The Machinery game engine"
repository = "https://github.com/celphase/machinery-rs"
edition = "2021"

[dependencies]
const-cstr = "0.3.0"
machinery-api = { version = "0.5.0", path = "../machinery-api" }
machinery-macros = { version = "0.6.0", path = "../machinery-macros" }

# TODO: Make these optional dependencies
tracing = "0.1.26"
ultraviolet = "0.8.1"
